--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,8 @@
     "license": "AGPL3.0",
     "authors": [
         {
-            "name": "Sameer Shelavale",
-            "email": "samiirds@gmail.com"
+            "name": "Diszo Sasil",
+            "email": "diszo2009@gmail.com"
         }
     ],
     "require": {
